feat: pagination sur GET /api/registrations/{tournamentId}, fix @Transactional double AdvanceBracketService, guard clause BracketUtils, GlobalExceptionHandlerTest, fix JWT expiré 401